Rename clashing packages